# zed-mcp-server-tavily

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml  flake.nix
configuration/: default_settings.jsonc  installation_instructions.md
src/: mcp_server_tavily.rs
